# Polaris_TelemetryDiagnostics

./: MANIFEST.in  Makefile  README.md  docker-compose.yml  run_docker_compose.sh  setup.cfg  tox.ini
docker/grafana/: env.grafana
docker/grafana/provisioning/datasources/: datasource.yml
docker/influxdb/: env.influxdb
docs/: InfluxDB.md
playground/: decode_elfin.py
playground/data/: 43617-482-20181022T023205Z-month.csv  mars-express-thermal-power--2014-01-01_2015-01-01.csv.gz.LICENSE
playground/kaitai_parsers/: ax25frames.py  elfin.py  elfin_pp.py
playground/notebooks/: README.md  elfin_predictions.ipynb  parser.ipynb  predictions_and_dependencies_using_xgboost.ipynb  requirements.txt
polaris/: __init__.py  _version.py
polaris.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
polaris/data_fetch/: data_fetch_decoder.py
polaris/learning/: README.md
polaris/learning/predictor/: cross_correlation.py
