[metadata]
name = polaris
url = https://gitlab.com/crespum/polaris
author = 
author_email = 
license = 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: LGPL
    Programming Language :: Python :: 3
description = Polaris
description-file = README.md
keywords =
    telemetry, satellite, machine learning

[options]
packages = find:
include_package_data = True
python_requires = >= 3
install_requires =
    kaitaistruct
    glouton
    click
    tqdm
    pandas
    scikit-learn
    xgboost
    satnogsdecoders

[bdist_wheel]
universal = true

[flake8]
exclude = polaris/_version.py,versioneer.py,build,.tox,playground,.venv

[tool:isort]
skip = _version.py,versioneer.py,build,.tox,playground
multi_line_output = 2

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = polaris/_version.py
versionfile_build = polaris/_version.py
tag_prefix =
parentdir_prefix =

[options.entry_points]
console_scripts =
    polaris = polaris.polaris:cli
